[gd_scene load_steps=22 format=2]

[ext_resource path="res://Themes/Fonts/Font32.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Backgrounds/Lines.gd" type="Script" id=2]
[ext_resource path="res://Scripts/UI/HoverAnimation.gd" type="Script" id=3]
[ext_resource path="res://Scripts/UI/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Themes/Theme.tres" type="Theme" id=5]
[ext_resource path="res://Sounds/main.ogg" type="AudioStream" id=6]

[sub_resource type="Gradient" id=53]
colors = PoolColorArray( 0, 0.753906, 1, 1, 0, 0, 0, 0 )

[sub_resource type="Gradient" id=22]
offsets = PoolRealArray( 0, 0.297111, 0.5, 0.66575, 1 )
colors = PoolColorArray( 0.00784314, 0.427451, 0.341176, 0, 0.0108747, 0.715446, 0.568541, 0.77304, 0.0117647, 0.8, 0.635294, 0.501961, 0.0117647, 0.8, 0.63668, 0.646492, 0.0117647, 0.8, 0.639216, 0 )

[sub_resource type="GradientTexture2D" id=21]
gradient = SubResource( 22 )
fill_from = Vector2( 0, 0.5 )
fill_to = Vector2( 1, 0.5 )

[sub_resource type="StyleBoxTexture" id=5]
texture = SubResource( 21 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="ButtonGroup" id=1]

[sub_resource type="ButtonGroup" id=46]

[sub_resource type="Gradient" id=49]
offsets = PoolRealArray( 0, 0.170564, 1 )
colors = PoolColorArray( 0.960094, 0, 0, 0.551395, 0, 0, 0, 0.698039, 1, 0, 0, 0.560784 )

[sub_resource type="GradientTexture2D" id=50]
gradient = SubResource( 49 )
fill_from = Vector2( 1, 0 )
fill_to = Vector2( 0, 0.480556 )

[sub_resource type="StyleBoxTexture" id=51]
texture = SubResource( 50 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="Gradient" id=43]
interpolation_mode = 2
colors = PoolColorArray( 0.0117647, 0.807843, 0.643137, 0.392157, 0.109502, 0.12083, 0.117054, 0.901826 )

[sub_resource type="GradientTexture2D" id=44]
gradient = SubResource( 43 )
fill_from = Vector2( 0, 1 )

[sub_resource type="StyleBoxTexture" id=45]
texture = SubResource( 44 )
region_rect = Rect2( 0, 0, 64, 64 )
margin_left = 15.0
margin_right = 15.0
margin_top = 15.0
margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.192157, 0.443137, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=47]
bg_color = Color( 0.192157, 0.443137, 0.392157, 1 )

[sub_resource type="ButtonGroup" id=48]

[node name="Main Menu" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1085.0
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}
lines = 200
speed = 500
gradient = SubResource( 53 )

[node name="List" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -721.92
margin_top = -451.5
margin_right = 721.92
margin_bottom = 451.5

[node name="SectorsList" type="ItemList" parent="List"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -600.0
margin_top = -350.0
margin_right = 600.0
margin_bottom = 350.0
rect_min_size = Vector2( 1, 0 )
theme = ExtResource( 5 )

[node name="Label" type="Label" parent="List"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -600.0
margin_right = 600.0
margin_bottom = 80.0
theme = ExtResource( 5 )
text = "Sector Editor"
align = 1
valign = 1

[node name="Handle" type="Node2D" parent="List"]

[node name="ListButtons" type="Panel" parent="List/Handle"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 121.92
margin_top = 822.0
margin_right = 1321.92
margin_bottom = 903.0
theme = ExtResource( 5 )
custom_styles/panel = SubResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="List/Handle/ListButtons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -600.0
margin_top = -29.5
margin_right = 600.0
margin_bottom = 30.5
theme = ExtResource( 5 )
alignment = 1

[node name="ListPlay" type="Button" parent="List/Handle/ListButtons/HBoxContainer"]
unique_name_in_owner = true
margin_left = 357.0
margin_right = 411.0
margin_bottom = 60.0
theme = ExtResource( 5 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 1 )
group = SubResource( 1 )
text = "Play"

[node name="ListEdit" type="Button" parent="List/Handle/ListButtons/HBoxContainer"]
unique_name_in_owner = true
margin_left = 426.0
margin_right = 478.0
margin_bottom = 60.0
theme = ExtResource( 5 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 1 )
group = SubResource( 1 )
text = "Edit"

[node name="VSeparator" type="VSeparator" parent="List/Handle/ListButtons/HBoxContainer"]
margin_left = 493.0
margin_right = 525.0
margin_bottom = 60.0
theme = ExtResource( 5 )

[node name="ListAdd" type="Button" parent="List/Handle/ListButtons/HBoxContainer"]
unique_name_in_owner = true
margin_left = 540.0
margin_right = 597.0
margin_bottom = 60.0
theme = ExtResource( 5 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 1 )
group = SubResource( 46 )
text = "Add"

[node name="ListRemove" type="Button" parent="List/Handle/ListButtons/HBoxContainer"]
unique_name_in_owner = true
margin_left = 612.0
margin_right = 718.0
margin_bottom = 60.0
theme = ExtResource( 5 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 1 )
group = SubResource( 1 )
text = "Remove"

[node name="VSeparator2" type="VSeparator" parent="List/Handle/ListButtons/HBoxContainer"]
margin_left = 733.0
margin_right = 765.0
margin_bottom = 60.0
theme = ExtResource( 5 )

[node name="ListBack" type="Button" parent="List/Handle/ListButtons/HBoxContainer"]
unique_name_in_owner = true
margin_left = 780.0
margin_right = 842.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 62, 0 )
theme = ExtResource( 5 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 1 )
group = SubResource( 1 )
text = "Back"

[node name="TitleButtons" type="Panel" parent="."]
unique_name_in_owner = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -540.0
margin_right = 360.0
margin_bottom = 540.0
theme = ExtResource( 5 )

[node name="TitleButtonsInner" type="VBoxContainer" parent="TitleButtons"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 80.0
margin_right = 120.0
margin_bottom = 540.0
size_flags_horizontal = 3
theme = ExtResource( 5 )

[node name="NewGame" type="Button" parent="TitleButtons/TitleButtonsInner"]
unique_name_in_owner = true
margin_right = 240.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 35 )
theme = ExtResource( 5 )
group = SubResource( 1 )
text = "New Game"
script = ExtResource( 3 )

[node name="LoadGame" type="Button" parent="TitleButtons/TitleButtonsInner"]
unique_name_in_owner = true
margin_top = 76.0
margin_right = 240.0
margin_bottom = 146.0
rect_pivot_offset = Vector2( 0, 35 )
theme = ExtResource( 5 )
group = SubResource( 1 )
text = "Load Game"
script = ExtResource( 3 )

[node name="Editor" type="Button" parent="TitleButtons/TitleButtonsInner"]
unique_name_in_owner = true
margin_top = 152.0
margin_right = 240.0
margin_bottom = 222.0
rect_pivot_offset = Vector2( 0, 35 )
theme = ExtResource( 5 )
group = SubResource( 1 )
text = "Editor"
script = ExtResource( 3 )

[node name="Quit" type="Button" parent="TitleButtons/TitleButtonsInner"]
unique_name_in_owner = true
margin_top = 228.0
margin_right = 240.0
margin_bottom = 298.0
rect_pivot_offset = Vector2( 0, 35 )
theme = ExtResource( 5 )
group = SubResource( 1 )
text = "Quit"
script = ExtResource( 3 )

[node name="Error" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -220.0
margin_right = 280.0
margin_bottom = -101.0

[node name="ErrorLabel" type="Label" parent="Error"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.894118, 0.211765, 0.211765, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Error cannot create file, error code: "
align = 1
valign = 1
autowrap = true

[node name="Panel" type="Panel" parent="Error"]
visible = false
margin_top = 20.0
margin_right = 400.0
margin_bottom = 100.0
custom_styles/panel = SubResource( 51 )

[node name="Confirm" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -73.5
margin_right = 200.0
margin_bottom = 73.5
rect_pivot_offset = Vector2( 200, 73.5 )

[node name="Panel" type="Panel" parent="Confirm"]
margin_right = 400.0
margin_bottom = 79.0
custom_styles/panel = SubResource( 45 )

[node name="SubmitPanel" type="Panel" parent="Confirm"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 21.5
margin_right = 200.0
margin_bottom = 72.5
custom_styles/panel = SubResource( 23 )

[node name="HBoxContainer" type="HBoxContainer" parent="Confirm/SubmitPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -23.0
margin_right = 100.0
margin_bottom = 24.0
theme = ExtResource( 5 )
alignment = 1

[node name="Yes" type="Button" parent="Confirm/SubmitPanel/HBoxContainer"]
margin_left = 48.0
margin_right = 95.0
margin_bottom = 47.0
theme = ExtResource( 5 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 1 )
group = SubResource( 1 )
text = "Yes"

[node name="No" type="Button" parent="Confirm/SubmitPanel/HBoxContainer"]
margin_left = 110.0
margin_right = 152.0
margin_bottom = 47.0
theme = ExtResource( 5 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 1 )
group = SubResource( 1 )
text = "No"

[node name="Label" type="Label" parent="Confirm"]
margin_right = 400.0
margin_bottom = 80.0
theme = ExtResource( 5 )
text = "Are you sure?"
align = 1
valign = 1

[node name="PromptHandle" type="Node2D" parent="."]

[node name="Prompt" type="Control" parent="PromptHandle"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 760.0
margin_top = 466.5
margin_right = 1160.0
margin_bottom = 613.5
rect_pivot_offset = Vector2( 200, 73.5 )

[node name="PromptBlocker" type="Control" parent="PromptHandle/Prompt"]
unique_name_in_owner = true
margin_left = -760.0
margin_top = -466.0
margin_right = 1160.0
margin_bottom = 615.0
__meta__ = {
"_edit_lock_": true
}

[node name="PromptEdit" type="LineEdit" parent="PromptHandle/Prompt"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -74.0
margin_right = 200.0
margin_bottom = 6.0
theme = ExtResource( 5 )
max_length = 32
expand_to_text_length = true
placeholder_text = "Sector name"
caret_blink = true

[node name="SubmitPanel" type="Panel" parent="PromptHandle/Prompt"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 21.5
margin_right = 200.0
margin_bottom = 72.5
custom_styles/panel = SubResource( 47 )

[node name="HBoxContainer2" type="HBoxContainer" parent="PromptHandle/Prompt/SubmitPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -23.0
margin_right = 100.0
margin_bottom = 24.0
theme = ExtResource( 5 )
alignment = 1

[node name="PromptDone" type="Button" parent="PromptHandle/Prompt/SubmitPanel/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 10.0
margin_right = 82.0
margin_bottom = 47.0
theme = ExtResource( 5 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 1 )
group = SubResource( 48 )
text = "Done"

[node name="PromptCancel" type="Button" parent="PromptHandle/Prompt/SubmitPanel/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 97.0
margin_right = 189.0
margin_bottom = 47.0
theme = ExtResource( 5 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 1 )
group = SubResource( 48 )
text = "Cancel"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="pressed" from="Confirm/SubmitPanel/HBoxContainer/Yes" to="." method="submit_prompt"]
[connection signal="pressed" from="Confirm/SubmitPanel/HBoxContainer/No" to="." method="close_prompt"]
